# vecclean

./: .gitignore  LICENSE  MANIFEST.in  README.md  post.sh  pyproject.toml
.github/workflows/: workflow.yml
configs/: config.yaml  default.yaml  stopwords.txt
src/vecclean/: __init__.py
src/vecclean/api/: deps.py  main.py  schemas.py
src/vecclean/chunk/: splitter.py
src/vecclean/clean/: normalize.py
src/vecclean/cli/: __main__.py
src/vecclean/core/: config.py  embedding.py  pipeline.py  types.py
src/vecclean/cpp/include/: cleaner.hpp
src/vecclean/cpp/src/: bindings.cpp  cleaner.cpp
src/vecclean/dedup/: chunk_dedup.py  sentence_dedup.py
src/vecclean/ingest/: detect.py
src/vecclean/utils/: hashing.py  io.py  logging.py  timing.py
tests/: test1.py
